--- a/homewrok-4/css/style.css
+++ b/homewrok-4/css/style.css
@@ -83,12 +83,11 @@
     font-size: 20px;
     font-weight: 700;
     color: rgb(85, 85, 85);
-    text-transform: uppercase;
     line-height: 1.2;
     text-align: center;
     margin-bottom: 12px;
     margin-top: 105px;
-    font-family: 'Kaushan Script', cursive;
+    font-family: 'Kaushan Script',  cursive;
     font-size: 24px;
     color: rgb(51, 51, 51);
     line-height: 1.2;
@@ -96,7 +95,6 @@
 
   .title-2 {
     font-size: 30px;
-    font-weight: 700;
     color: rgb(85, 85, 85);
     text-transform: uppercase;
     line-height: 1.2;
@@ -104,8 +102,7 @@
     margin-bottom: 28px;
     font-family: 'Montserrat';
     color: rgb(51, 51, 51);
-    font-weight: bold;
-    line-height: 1.2;
+    font-weight: bold ;
 }
 
   .title-2::after {
@@ -141,6 +138,7 @@
   font-size: 14px;
   font-family: "Montserrat";
   color: rgb(51, 51, 51);
+  text-transform: uppercase;
 }
 
 .service-text{
@@ -235,10 +233,10 @@
   content: "";
   display: block;
   background-color:#e5e5e5;
-  width: 60%;
+  width: 1085px;
   height: 1px;
-  margin-top: 87px;
-  margin-left: 19%;
+  margin-top: 86px;
+  /* margin-left: 119px; */
 }
 
 .f-element{
