--- a/homework-6/css/style.css
+++ b/homework-6/css/style.css
@@ -161,7 +161,7 @@ body{
   background-position: center center;
   display: flex;
   justify-content: center;
-  margin-left: 139px;
+  margin-left: 41%;
 }
 
 .img-s-2{
@@ -190,7 +190,7 @@ body{
   width: 940px;
   position: absolute;
   top: 898px;
-  left: 19%;
+  left: 23%;
 
 }
 
