--- a/homework-5/css/style.css
+++ b/homework-5/css/style.css
@@ -1,7 +1,7 @@
 /* ------------------------------Fons----------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 /* ------------------------------End fons------------------- */
 *{
@@ -9,28 +9,39 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+
+img{
+  max-width: 100%;
+  height: auto;
+}
+
 /* -------------------------------------------------- Menu-------------------------------------------------------------- */
 
 .container { 
-  max-width: 1230px; 
+  max-width: 1170px; 
+  margin: 0 auto;
   padding: 0 15px; 
-  margin: auto;
 } 
  
 .header { 
   padding-top: 40px; 
   background-size: cover; 
+  margin-bottom: 131px;
 } 
  
 .navigation { 
   display: flex; 
   justify-content: space-between; 
-  margin-bottom: 136 px; 
 } 
  
 .logo { 
   font-size: 30px;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   line-height: 1.2;
   color: #95e1d3;
@@ -57,9 +68,11 @@
   color: #95e1d3;
   line-height: 1.2;
   text-decoration: none;
+  text-transform: uppercase;
 } 
  
 .menu-item__link::after { 
+  margin-top: 10px;
   content: ""; 
   display: block; 
   height: 3px; 
@@ -86,7 +99,6 @@
     line-height: 1.2;
     text-align: center;
     margin-bottom: 12px;
-    margin-top: 105px;
     font-family: 'Kaushan Script',  cursive;
     font-size: 24px;
     color: rgb(51, 51, 51);
@@ -115,7 +127,6 @@
 }
   .box-title_1{
       padding-bottom: 66px;
-      padding-top: 100px;
   }
 
  /* ---------------------------------------------------End Title-1----------------------------------------------------------- */
@@ -124,25 +135,27 @@
     display: flex;
     width: 33.3%;
     margin-bottom: 50px;
+    padding-right: 15px;
 }
 
 .serv-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-left: 30px;
+    /* width: 1170;
+    margin-left: 15%; */
 }
 
 /* .container { 
-  max-width: 1230px; 
+  max-width: 1170px; 
+  margin: 0 auto; 
   padding: 0 15px; 
-  margin: auto;
 } */
 
 
-.sersice-title{
+.service-title{
   font-size: 14px;
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   color: rgb(51, 51, 51);
   text-transform: uppercase;
 }
@@ -152,6 +165,7 @@
   font-family: "Roboto";
   color: rgb(153, 153, 153);
   line-height: 1.6;
+  padding-left: 62px;
 }
 
 .service-item_top{
@@ -159,7 +173,8 @@
 }
 
 .img-service_container{
-    margin-right: 30px;
+    margin-right: 15px;
+    margin-left: 15px;
     margin-bottom: 25px;
 }
 
@@ -220,6 +235,7 @@
 .meet_our_team_block-display {
   display: flex;
   height: 550px;
+  margin-bottom: 62px;
   width: 1210px;
   justify-content: space-around;
 }
@@ -231,6 +247,7 @@
   position: relative;
   cursor: pointer;
   margin-left: 0;
+  margin-bottom: 62px;
 }
 
 .developer-1:hover .ac-s {
@@ -315,6 +332,7 @@
 
 .dev-t {
   margin-top: 4px;
+ /* margin-bottom: 62px; */
   font-size: 15px;
   font-family: "Myriad Pro";
   color: rgb(153, 153, 153);
@@ -334,9 +352,8 @@
 
 } */
 
-.img-container:hover{
-  top: -10;
-  left: -10;
+.img-container:hover {
+  transform: translateX(-10px) translateY(-10px);
 }
 
 .meet_our_team_block-display .img-container > img {
@@ -457,23 +474,26 @@
 /* -------------------------------------------------- Footer-------------------------------------------------------------- */
 .footer-container{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
+  border-top: #e5e5e5 solid 1px ;
+  padding-top: 10px;
+  padding-bottom: 12px;
+  
 }
 
 
-.footer-container::before{
+/* .footer-container::before{
    margin-bottom: 10px;
   content: "";
   display: block;
   background-color:#e5e5e5;
-  width: 1085px;
+  width: 100%;
   height: 1px;
   margin-top: 86px;
   /* margin-left: 119px; */
-}
 
 .f-element{
   display: flex;
