--- a/homework-6/css/style.css
+++ b/homework-6/css/style.css
@@ -79,13 +79,13 @@
 /* -------------------------------------------------- Services-------------------------------------------------------------- */
 
 .title-1{
-  font-size: 18px;
+  font-size: 40px;
   font-family: "Montserrat", sans-serif;
-  color: rgb(34, 34, 34);
-  font-weight: bold;
+  color:rgb(255, 255, 255);
+  font-weight: bold;  
   line-height: 4.167;
   text-align: center;
-  font-weight: 900;
+  color: rgb(34, 34, 34);
 }
 
 .title-2 {
@@ -162,13 +162,13 @@
 
 
 .title-3{
-  font-size: 18px;
+  font-size: 40px;
   font-family: "Montserrat", sans-serif;
-  color: #ffffff;
-  font-weight: bold;
+  color:rgb(255, 255, 255);
+  font-weight: bold;  
   line-height: 4.167;
   text-align: center;
-  font-weight: 900;
+  /* font-weight: 700; */
 }
 
 .title-4 {
@@ -209,6 +209,7 @@
 .f-form{
   padding-top: 75px;
   padding-bottom: 115px;
+  width: 67%;
 }
 
 .f-d{
@@ -256,7 +257,7 @@
   width: 100%;
   margin-left: 30px;
   font-size: 14px;
-  font-family: "Montserrat";
+  font-family: "Montserrat", serif;
   color: rgb(187, 187, 187);
   font-weight: bold;
   text-transform: uppercase;
@@ -266,7 +267,7 @@
 }
 
 .i-c-2{
-  width: 100%;
+  width: 67%;
   display: flex;
   flex-direction: column;
   font-size: 14px;
