--- a/homework-5/css/style.css
+++ b/homework-5/css/style.css
@@ -11,21 +11,32 @@
 }
 
 body{
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+    width: auto;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
 }
 
 img{
   max-width: 100%;
   height: auto;
 }
+button {
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
 
 /* -------------------------------------------------- Menu-------------------------------------------------------------- */
 
 .container { 
-  max-width: 1170px; 
+  max-width: 1200px; 
   margin: 0 auto;
-  padding: 0 15px; 
+  /* padding: 0 15px;  */
 } 
  
 .header { 
@@ -224,63 +235,41 @@ img{
 
 .Meet_our_team__img-block {
   position: relative;
-  /* display: flex; */
-  /* justify-content: space-evenly; */
-  /* flex-wrap: wrap; */
-  /* margin: 0 auto; */
   margin-top: 85px;
-  /* border: 1px solid crimson; */
 }
 
-.meet_our_team_block-display {
+/* .meet_our_team_block-display {
   display: flex;
   height: 550px;
   margin-bottom: 62px;
   width: 1210px;
   justify-content: space-around;
+} */
+
+.meet_our_team_block-display {
+  display: flex;
+  height: 550px;
+  justify-content: space-between;
 }
 
 .developer-1 {
-  width: 380px;
+  /* width: 380px;
   height: 470px;
   background-color: rgb(149, 225, 211);
   position: relative;
   cursor: pointer;
   margin-left: 0;
-  margin-bottom: 62px;
+  margin-bottom: 62px; */
+  /* margin-right: 30px; */
+  width: 380px;
+  height: 470px;
+  background-color: rgb(149, 225, 211);
+  position: relative;
 }
 
 .developer-1:hover .ac-s {
   top: 0;
 }
-
-/* .developer-2 {
-  width: 380px;
-  height: 470px;
-  background-color: rgb(149, 225, 211);
-  position: relative;
-  cursor: pointer;
-  margin-left: 0;
-}
-
-
-
-.developer-2:hover .ac-s {
-  top: 0;
-}
-
-.developer-3 {
-  width: 380px;
-  height: 470px;
-  background-color: rgb(149, 225, 211);
-  position: relative;
-  cursor: pointer;
-  margin-left: 0;
-}
-
-.developer-3  :hover .ac-s {
-  top: 0;
-} */
 
 .ac-s {
   display: flex;
@@ -308,11 +297,11 @@ img{
   position: absolute;
   transition: all 0.3s linear;
 }
-
+/*  
 .ac-s{
   top: -10;
   left: -10;
-}
+}  */
 
 .dev_img {
   width: 380px;
@@ -351,6 +340,10 @@ img{
 /* .img-container{
 
 } */
+
+.img-container {
+  transition: 0.3s linear all;
+}
 
 .img-container:hover {
   transform: translateX(-10px) translateY(-10px);
